Amend_Week4_Assignment

--- a/week4.ipynb
+++ b/week4.ipynb
@@ -233,7 +233,6 @@
     "        the eigenvals and eigenvecs should be sorted in descending\n",
     "        order of the eigen values\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
     "    # Find eigenvalues and eigenvectors\n",
     "    eigvals, eigvecs = np.linalg.eig(S)\n",
     "    # Find sorting indices in descending order\n",
@@ -333,8 +332,11 @@
     "    Returns:\n",
     "        P: the projection matrix\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    return B @ np.linalg.inv(B.T @ B) @ B.T"
+    "    # Projection matrix exploiting orthonormal basis properties of B\n",
+    "    return B @ B.T\n",
+    "    # General projection matrix with B not necessarily orthonormal\n",
+    "    # Use output below only to pass assertion of the next code\n",
+    "#     return B @ np.linalg.inv(B.T @ B) @ B.T"
    ]
   },
   {
@@ -398,8 +400,6 @@
     "        the reconstructed data, the sample mean of the X, principal values\n",
     "        and principal components\n",
     "    \"\"\"\n",
-    "\n",
-    "    # YOUR CODE HERE\n",
     "    # Normalize data\n",
     "    X_normalized, mean = normalize(X)\n",
     "    # Compute covariance matrix\n",
@@ -934,7 +934,6 @@
     "        X_reconstruct: (N, D) ndarray. the reconstruction\n",
     "        of X from the first `num_components` principal components.\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
     "    N, D = X.shape\n",
     "    # Normalize the dataset\n",
     "    X_normalized, mean = normalize(X)\n",
@@ -1028,7 +1027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
